Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2.2, 10.3.0
-
Fix Version/s: 10.3.7
-
Component/s: Storage Engine - InnoDB
-
Labels:
Description
In InnoDB, spatial index (R-tree) records always start with a field whose length is DATA_MBR_LEN. This field is unfortunately declared as variable-length, so its length is always encoded.
The InnoDB functions dict_index_copy_rec_order_prefix() and rec_copy_prefix_to_buf() are treating spatial indexes as if they could have any number of fields or any length for the first field.