MDEV-16058 Unnecessary computations for SPATIAL INDEX

dict_index_copy_rec_order_prefix(): Avoid invoking
dict_index_get_n_unique_in_tree_nonleaf().

create_index(): Simplify code for creating SPATIAL or FULLTEXT index.

rec_copy_prefix_to_buf(): Skip the loop for SPATIAL INDEX.